--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
   "main": "./lib/index.js",
   "scripts": {
@@ -29,13 +29,13 @@
     "https",
     "ostr.io"
   ],
-  "author": "Dmitriy A. (http://veliovgroup.com)",
-  "license": "BSD 3-Clause",
+  "author": "Dmitriy A. (https://veliovgroup.com)",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/VeliovGroup/spiderable-middleware/issues"
   },
   "homepage": "https://github.com/VeliovGroup/spiderable-middleware",
   "dependencies": {
-    "request": "^2.69.0"
+    "request": "^2.76.0"
   }
 }
