--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
   "main": "./lib/index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "spiderable",
     "crawlble",
     "prerender",
+    "prerendering",
     "ajax",
     "seo",
     "angular",
@@ -38,6 +39,6 @@
   },
   "homepage": "https://github.com/VeliovGroup/spiderable-middleware",
   "dependencies": {
-    "request": "^2.81.0"
+    "request": "^2.83.0"
   }
 }
