--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "mocha": "^4.0.1",
     "chai": "^4.1.2",
     "underscore": "^1.8.3",
+    "express": "^4.16.2",
+    "connect": "^3.6.5 ",
     "spiderable-middleware": "file://./"
   }
 }
