--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./test/npm.js"
   },
   "repository": {
     "type": "git",
@@ -46,7 +46,6 @@
     "chai": "^4.1.2",
     "underscore": "^1.8.3",
     "express": "^4.16.2",
-    "connect": "^3.6.6 ",
-    "spiderable-middleware": "file://./"
+    "connect": "^3.6.6 "
   }
 }
