--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
   "main": "./lib/index.js",
   "scripts": {
@@ -42,10 +42,10 @@
     "request": "^2.87.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
     "chai": "^4.1.2",
-    "underscore": "^1.9.0",
+    "connect": "^3.6.6 ",
     "express": "^4.16.3",
-    "connect": "^3.6.6 "
+    "mocha": "^5.2.0",
+    "underscore": "^1.9.1"
   }
 }
