--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.3.4",
+  "version": "1.3.6",
   "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
   "main": "./lib/index.js",
   "scripts": {
@@ -32,12 +32,12 @@
     "https",
     "ostr.io"
   ],
-  "author": "Dmitriy A. (https://veliovgroup.com)",
+  "homepage": "https://github.com/VeliovGroup/spiderable-middleware",
+  "author": "dr.dimitru (https://veliovgroup.com)",
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/VeliovGroup/spiderable-middleware/issues"
   },
-  "homepage": "https://github.com/VeliovGroup/spiderable-middleware",
   "dependencies": {
     "request": "^2.88.0"
   },
@@ -45,7 +45,7 @@
     "chai": "^4.2.0",
     "connect": "^3.6.6 ",
     "express": "^4.16.4",
-    "mocha": "^5.2.0",
+    "mocha": "^6.1.4",
     "underscore": "^1.9.1"
   }
 }
