--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spiderable-middleware",
-  "version": "1.3.6",
-  "description": "Allow your JavaScript website to be crawled perfectly by search engines.",
+  "version": "1.4.0",
+  "description": "Perfect SEO for JavaScript websites. Pre-rendering — it's just like SSR, but with no coding and simple integration",
   "main": "./lib/index.js",
   "scripts": {
     "test": "mocha ./test/npm.js"
@@ -39,13 +39,14 @@
     "url": "https://github.com/VeliovGroup/spiderable-middleware/issues"
   },
   "dependencies": {
-    "request": "^2.88.0"
+    "request-libcurl": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "connect": "^3.6.6 ",
-    "express": "^4.16.4",
+    "connect": "^3.7.0",
+    "express": "^4.17.1",
     "mocha": "^6.1.4",
+    "request": "^2.88.0",
     "underscore": "^1.9.1"
   }
 }
