--- a/package.json
+++ b/package.json
@@ -18,7 +18,35 @@
     "spiderable",
     "crawlble",
     "prerender",
+    "pre-rendering",
     "prerendering",
+    "ssr",
+    "server side rendering",
+    "ajax",
+    "seo",
+    "angular",
+    "backbone",
+    "emberjs",
+    "meteor",
+    "meteorjs",
+    "express",
+    "connect",
+    "http",
+    "https",
+    "ostr.io"
+  ],
+  "tags": [
+    "_escaped_fragment_",
+    "crawl",
+    "SEO",
+    "middleware",
+    "spiderable",
+    "crawlble",
+    "prerender",
+    "pre-rendering",
+    "prerendering",
+    "ssr",
+    "server side rendering",
     "ajax",
     "seo",
     "angular",
