📦 meta: improve ignored files

--- a/.meteorignore
+++ b/.meteorignore
@@ -1,19 +1,24 @@
-.github
-.gitignore
-.npmignore
-.npm
+*.md
 .DS_Store
 .eslintcache
 .eslintrc
-node_modules
+.github
+.gitignore
+.npm
+.npmignore
 CHANGELOG.md
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
+docs
+docs/*
+examples
+examples/*
 HISTORY.md
 LICENCE
 LICENSE
-README.md
-docs
-examples
-package.json
+node_modules
 package-lock.json
+package.json
+README.md
+test/
+test/*
